# dearpygui-todo

./: demo.py  plotting.py  pyproject.toml
todo_dearpy/: __init__.py  todo_model.py
todo_dearpy/components/: __init__.py  listbox_todomanager.py  table_todomanager.py
todo_dearpy/services/: todo_model.py
todo_dearpy/ui/: base.py
